--- a/src/layouts/MainLayout/Header.module.scss
+++ b/src/layouts/MainLayout/Header.module.scss
@@ -8,12 +8,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: $z-header;
-  width: 100%;
   
   @include tablet-and-up {
+    position: sticky;
+    left: auto;
+    right: auto;
     padding: 0 $spacing-xl;
   }
 }
